2022-11-08 Christian Kohn <chris.kohn@amd.com>

	* libfreeipmi, ipmi-fru: Support xilinx OEM fru records.

2022-11-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
	Fix comment typo.

2022-11-04 Sam James <sam@gentoo.org>

	* configure.ac: Fix various portability to clang.

2022-11-02 Fabrice Fontaine <fontaine.fabrice@gmail.com>

	* configure.ac: support --disable-doc.

2022-10-27 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	Intel M50CYP.

	* doc/ipmi-second-gen-interface-spec-v2-rev1-1.pdf: Store copy of
	IPMI spec with final revisions.  Since there will be no future
	updates.

2022-10-26 Mert Kirpici <mert.kirpici@canonical.com>

	* ipmi-sel: accept ISO 8601 for date range options.

2022-10-06 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-and-workarounds.txt: fix typo

2022-09-19 Albert Chu <chu11@llnl.gov>

	* configure.ac: Add extra build help.

2022-09-06 Albert Chu <chu11@llnl.gov>

	* common/portability/freeipmi-argp-fmtstream.h: Do not optimize under
	cygwin, fixes portability issues.

2022-08-31 Albert Chu <chu11@llnl.gov>
	* libfreeipmi/include/freeipmi/sel/: Remove no longer relevant
	comments.

2022-08-30 Albert Chu <chu11@llnl.gov>

	* ipmi-raw: Remove legacy options --channel-number
	(--target-channel-number since 1.2.1), --slave-address
	(--target-slave-address since 1.2.1).

	* ipmipower: Remove no longer relevant comment.

	* ipmidetectd: Remove legacy --config_file support (--config-file
	since 1.2.1)

	* ipmidetect: Remove legacy -o short option (-h since 1.2.1)

	* ipmi-sel: Remove legacy option --assume-system-event-records
	(use -W assumesystemevent since 1.2.1)

	* ipmi-fru: Remove legacy option --skip-checks(use -W skipchecks
	since 1.2.1)

	* ipmi-sensors: Remove "ipmi-sensors-sensor-config-file" config
	file support (use "ipmi-sensors-sensor-state-config-file" since
	1.0.0). Remove "ipmi-sensors-groups" and